# mx-network-assistant

./: .gitignore  CMakeLists.txt  README.md  about.cpp  about.h  build.sh  cmd.cpp  cmd.h  common.h  helper.cpp  images.qrc  license.html  main.cpp  mainwindow.cpp  mainwindow.cpp.REMOVED.git-id  mainwindow.h  mainwindow.ui  mconfig.cpp  mconfig.h  meconfig.ui  mx-network-assistant.desktop  mx-network-assistant.pro  mx-network-assistant_17.10.dsc  mx-network-assistant_17.10.tar.xz  mx-network-assistant_17.10_amd64.changes  mx-network-assistant_17.10_amd64.deb  mx-network-assistant_17.10_i386.changes  mx-network-assistant_17.10_i386.deb  mx-network-assistant_17.12.dsc  mx-network-assistant_17.12.tar.xz  mx-network-assistant_17.12_amd64.changes  mx-network-assistant_17.12_amd64.deb  mx-network-assistant_17.12_i386.changes  mx-network-assistant_17.12_i386.deb  mx-network-assistant_17.8.dsc  mx-network-assistant_17.8.tar.xz  mx-network-assistant_17.8_amd64.changes  mx-network-assistant_17.8_amd64.deb  mx-network-assistant_17.8_i386.changes  mx-network-assistant_17.8_i386.deb  (+56 more)
.github/workflows/: release.yaml
.obs/: workflows.yml
debian/: changelog  control  copyright  install  rules
debs/: README.md  mx-network-assistant_19.7.1.dsc  mx-network-assistant_19.7.1.tar.xz  mx-network-assistant_19.7.1_amd64.changes  mx-network-assistant_19.7.1_amd64.deb  mx-network-assistant_19.7.1_i386.deb  mx-network-assistant_19.7.dsc  mx-network-assistant_19.7.tar.xz  mx-network-assistant_19.7_amd64.changes  mx-network-assistant_19.7_amd64.deb  mx-network-assistant_19.7_i386.deb  mx-network-assistant_19.8.1.dsc  mx-network-assistant_19.8.1.tar.xz  mx-network-assistant_19.8.1_amd64.changes  mx-network-assistant_19.8.1_amd64.deb  mx-network-assistant_19.8.1_i386.deb  mx-network-assistant_19.8.dsc  mx-network-assistant_19.8.tar.xz  mx-network-assistant_19.8_amd64.changes  mx-network-assistant_19.8_amd64.deb  mx-network-assistant_19.8_i386.deb  mx-network-assistant_19.9.01.dsc  mx-network-assistant_19.9.01.tar.xz  mx-network-assistant_19.9.01_amd64.changes  mx-network-assistant_19.9.01_amd64.deb  mx-network-assistant_19.9.01_i386.deb  mx-network-assistant_19.9.dsc  mx-network-assistant_19.9.tar.xz  mx-network-assistant_19.9_amd64.changes  mx-network-assistant_19.9_amd64.deb  mx-network-assistant_19.9_i386.deb  mx-network-assistant_20.8.dsc  mx-network-assistant_20.8.tar.xz  mx-network-assistant_20.8_amd64.changes  mx-network-assistant_20.8_amd64.deb  mx-network-assistant_20.8_i386.deb  mx-network-assistant_22.10.01.dsc  mx-network-assistant_22.10.01.tar.xz  mx-network-assistant_22.10.01.tar.xz.REMOVED.git-id  mx-network-assistant_22.10.01_amd64.build  (+121 more)
help/: 13.jpg.REMOVED.git-id  license.html  mx-network-assistant.html
scripts/: mxna-launcher  org.mxlinux.pkexec.mxna-helper.policy  org.mxlinux.pkexec.mxna-launcher.policy
translations/: get_translations  mx-network-assistant_af.ts  mx-network-assistant_am.qm  mx-network-assistant_am.ts  mx-network-assistant_ar.qm  mx-network-assistant_ar.ts  mx-network-assistant_ast.ts  mx-network-assistant_be.ts  mx-network-assistant_bg.qm  mx-network-assistant_bg.ts  mx-network-assistant_bn.ts  mx-network-assistant_bs.ts  mx-network-assistant_bs_BA.ts  mx-network-assistant_ca.qm  mx-network-assistant_ca.ts  mx-network-assistant_ceb.ts  mx-network-assistant_co.ts  mx-network-assistant_cs.qm  mx-network-assistant_cs.ts  mx-network-assistant_cy.ts  mx-network-assistant_da.qm  mx-network-assistant_da.ts  mx-network-assistant_de.qm  mx-network-assistant_de.ts  mx-network-assistant_el.qm  mx-network-assistant_el.ts  mx-network-assistant_en.ts  mx-network-assistant_en_GB.ts  mx-network-assistant_en_US.ts  mx-network-assistant_eo.ts  mx-network-assistant_es.qm  mx-network-assistant_es.ts  mx-network-assistant_es_ES.ts  mx-network-assistant_et.qm  mx-network-assistant_et.ts  mx-network-assistant_eu.qm  mx-network-assistant_eu.ts  mx-network-assistant_fa.qm  mx-network-assistant_fa.ts  mx-network-assistant_fi.qm  (+132 more)
translations-desktop-file/: uploadlist.txt
translations-desktop-file/desktop-in/: mx-network-assistant.desktop.in
translations-desktop-file/po/: LINGUAS  mx-network-assistant-desktop_af.po  mx-network-assistant-desktop_am.po  mx-network-assistant-desktop_ar.po  mx-network-assistant-desktop_ast.po  mx-network-assistant-desktop_be.po  mx-network-assistant-desktop_bg.po  mx-network-assistant-desktop_bn.po  mx-network-assistant-desktop_bs.po  mx-network-assistant-desktop_bs_BA.po  mx-network-assistant-desktop_ca.po  mx-network-assistant-desktop_ceb.po  mx-network-assistant-desktop_co.po  mx-network-assistant-desktop_cs.po  mx-network-assistant-desktop_cy.po  mx-network-assistant-desktop_da.po  mx-network-assistant-desktop_de.po  mx-network-assistant-desktop_el.po  mx-network-assistant-desktop_en_GB.po  mx-network-assistant-desktop_en_US.po  mx-network-assistant-desktop_eo.po  mx-network-assistant-desktop_es.po  mx-network-assistant-desktop_es_ES.po  mx-network-assistant-desktop_et.po  (+104 more)
(+45 files in other folders)
